# herodotus

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
examples/: example1.py  example2.py  example3.py  example4.py  example5.py  example6.py
