[metadata]
name = Herodotus
version = 1.0.0
author = Emad Helmi
author_email = s.emad.helmi@gmail.com
description = An enhanced python logger
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://gitlab.com/codasteroid/basicpkg
project_urls =
  Bug Tracker = https://gitlab.com/codasteroid/basicpkg/-/issues
  repository = https://gitlab.com/codasteroid/basicpkg
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.11

[options.packages.find]
where = src
